feat(phase 4a): semantic model implementation.